tests/ui/error-codes/E0779.rs
#[instruction_set(arm::magic)] //~ ERROR `[instruction_set]` attribute argument
                               // should be valid
fn main() {}
